# obstacle-avoidance

./: .gitignore  CMakeLists.txt  README.md
config/: params.json
docs/: pid_testing_plan.md
scripts/: build.sh  launch_sitl.sh
src/: main.cpp
src/camera/: camera_interface.cpp  camera_interface.hpp
src/control/: avoidance_strategy.cpp  avoidance_strategy.hpp  control_loop.cpp  control_loop.hpp
src/core/: channel.hpp  command_queue.hpp  ekf_ring_buffer.hpp  mavsdk_connection.cpp  mavsdk_connection.hpp  messages.hpp  service_base.hpp
src/detection/: object_detector.cpp  object_detector.hpp
src/mavsdk_manager/: mavsdk_debug.hpp  mavsdk_manager.cpp  mavsdk_manager.hpp
src/navigation/: rotation_tracker.cpp  rotation_tracker.hpp
src/services/: avoidance_planner_service.cpp  avoidance_planner_service.hpp  camera_service.cpp  camera_service.hpp  command_service.cpp  command_service.hpp  depth_service.cpp  depth_service.hpp  detection_service.cpp  detection_service.hpp  flight_manager_service.cpp  flight_manager_service.hpp  pid_service.cpp  pid_service.hpp  sync_service.cpp  sync_service.hpp  telemetry_service.cpp  telemetry_service.hpp
src/utils/: logger.hpp  shared_state.hpp
